Fixed some bugs

--- a/thesis/software.tex
+++ b/thesis/software.tex
@@ -1,7 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{Atomic clock controller architecture}
-When discussing how to implement the software realizing the spoof proof atomic clock controller, the following features and requirements were identified: 
+When discussing how to implement the spoof proof atomic clock controller's software the following features and requirements were identified: 
 \begin{itemize}
   \item Speed and efficiency is important in order to detect attacks as early as possible.
   \item Extensive logging capabilities for forensics.
@@ -9,38 +9,38 @@ When discussing how to implement the software realizing the spoof proof atomic c
   \item Should support as many GPS receivers as possible.
   \item Easy interfacing. Should be possible to operate over Telnet/SSH.
   \item Easy to configure.
-  \item Graphical user interface not a requirement
+  \item Graphical user interface is not a requirement
 \end{itemize}
 
 \section{Client/Server model}
-In order to connect many GPS receivers to the atomic clock controller, we decided to implement a client/server model. The atomic clock controller serves the same purpose as before, but doubles as a server. The data transmitted, will still be the same, the only difference is the interface and media. A network interface will be used instead of USB, and the media can be whatever is available since TCP/IP is designed to be hardware independent. This means that one could for example use:
+In order to connect many GPS receivers to the atomic clock controller, we decided to implement a client/server model. The atomic clock controller serves the same purpose as before, but doubles as a server. The data transmitted, will still be the same, the only difference is the interface and media. A network interface will be used instead of USB and the media can be whatever is available since TCP/IP is designed to be hardware independent. This opens up the possibility for using:
 \begin{itemize}
   \item Twisted pair
   \item Fiber optics
   \item WiFi
   \item 4G (cellular)
 \end{itemize}
-Because reaction time is a concern, high latency media is not recommended \footnote{IP over Avian Carriers as described in RFC 1149 is highly discouraged}. The GPS receivers that we have chosen to use, does not have a network interface, we instead use Raspberry PIs. A GPS receiver is connected to a Raspberry PI thus giving it a network interface. Considering how cheap single board computer have become, the price of a Raspberry PI can be justified even just to network enable a GPS receiver. The latest model of the Raspberry Pi has even got a built in wireless network interface. See \ref{platform} for more about the Raspberry Pi 3. The combination the GPS receiver and the Raspberry PI, is in this report abstractly seen as one device. We call this device a Sensor. The Sensor is responsible for reporting data to the Server and not much more. The Sensor can be deployed using already existing infrastructure to communicate, thus making it easier to deploy than if each GPS receiver had to cabled directly to the atomic clock controller. There is no denying that the implementation of a Server/Client model greatly increases the complexity of the atomic clock controller software, but it makes up for it by eliminating the need for long signal cables and amplifiers. We call this approach the \textit{Sensor Server} model.
+Because reaction time is a concern, high latency media is not recommended \footnote{IP over Avian Carriers as described in RFC 1149 is highly discouraged}. The GPS receivers that we have chosen to use do not have a network interface, we instead use Raspberry PIs. A GPS receiver is connected to a Raspberry PI thus giving it a network interface. Considering how cheap single board computers have become, the price of a Raspberry PI can be justified even just to network enable a GPS receiver. The latest model of the Raspberry Pi has even got a built in wireless network interface. See \ref{platform} for more about the Raspberry Pi 3. The combination of the GPS receiver and the Raspberry PI are in this report abstractly seen as one device. We call this device a Sensor. The Sensor is responsible for reporting data to the Server and not much more. The Sensor can be deployed using already existing infrastructure to communicate, thus making it easier to deploy than if each GPS receiver had to be cabled directly to the atomic clock controller. There is no denying that the implementation of a Server/Client model greatly increases the complexity of the atomic clock controller software, but it makes up for it by eliminating the need for long signal cables and amplifiers. We call this approach the \textit{Sensor Server} model.
 
 \section{Architecture description}\label{arch_desc}
-In order to connect the Sensors to the server, the atomic clock controllers software needs to be able to:
+In order to connect the Sensors to the server, the atomic clock controller's software needs to be able to:
 \begin{itemize}
   \item Handle connections to clients.
-  \item Update structures as clients status changes (disconnects or gets kicked out).
+  \item Update structures as clients' status changes (disconnects or gets kicked out).
   \item Receive data from clients
 \end{itemize}
-These are tasks that the atomic clock controller needs to be able to perform as well as controlling the clock and analyzing data. In order to implement the Server/Client model, the Server is implemented using the Linux Socket API. The API is based on BSD sockets and are available in in almost all Unix-like operating system (\cite{LINUX_KERNEL}, p.610). A socket is a handle that can be passed by a program to the network API in order to use the network connection. The plan was briefly to use Glib \cite{GLIB}, a library that provides building blocks for libraries and applications written in C, instead of using low-level sockets. This idea was scrapped because I felt that it would be overkill for this implementation.
+These are tasks that the atomic clock controller needs to be able to perform as well as controlling the clock and analyzing data. In order to implement the Server/Client model, the Server is implemented using the Linux Socket API. The API is based on BSD sockets and is available in in almost all Unix-like operating system (\cite{LINUX_KERNEL}, p.610). A socket is a handle that can be passed by a program to the network API in order to use the network connection. The plan was briefly to use Glib \cite{GLIB}, a library that provides building blocks for libraries and applications written in C, instead of using low-level sockets. This idea was scrapped because I felt that it would be overkill for this implementation.
 
-Having decided \textit{how} the clients should connect to the server, the next challenge becomes how the server should communicate with the clients and vice versa. We decided to use what is called \textit{blocking I/O} and \textit{fork()}. This is a very common approach, but not the fastest (\cite{UNIXN_WBA}, p. 188). It is however quite easy to implement. Blocking I/O means that read operations on the socket blocks the main thread in the process until data has been received. This is not as dramatic as it might seem: If a Socket call cannot be completed immediately, the process who issued the call will be put to sleep thus enabling the scheduler to schedule other processes for execution until conditions are right for the sleeping process (\cite{UNIXN_WBA}, p.435). Fork() is a system call used to create a new process. The new process is called a child and the process that called the fork() system call, is the parent. The child process is a duplicate of the parent process. The alternative to using fork(), is to create a thread. The creation of threads are typically less expensive in terms of CPU cycles than the creation of processes, but presents their own challenges. Processes always have their own virtual address space as opposed to threads who share their address space with the other threads within the process. This makes programming with threads more complex. The result of a thread crashing can have a more severe impact on the other threads within the same process since they all shared the same data. The new process is used by the server to handle the newly created connection. This means that for every connected client, there is a process created. This of course means that this solution does not scale awfully well. This is however not a big problem for us since the time taken for a Sensor to connect to the server really doesn't matter. Once all Sensors in a setup has connected, they should not disconnect unless taken down for maintenance or replacement. 
+Having decided \textit{how} the clients should connect to the server, the next challenge becomes how the server should communicate with the clients and vice versa. We decided to use what is called \textit{blocking I/O} and \textit{fork()}. This is a very common approach, but not the fastest (\cite{UNIXN_WBA}, p. 188). It is however quite easy to implement. Blocking I/O means that read operations on the socket blocks the main thread in the process until data has been received. This is not as dramatic as it might seem: If a Socket call cannot be completed immediately the process who issued the call will be put to sleep thus enabling the scheduler to schedule other processes for execution until conditions are right for the sleeping process (\cite{UNIXN_WBA}, p.435). Fork() is a system call used to create a new process. The new process is called a child and the process that called the fork() system call is called the parent. The child process is a duplicate of the parent process. The alternative to using fork() is to create a thread. The creation of threads are typically less expensive in terms of CPU cycles than the creation of processes, but presents their own challenges. Processes always have their own virtual address space as opposed to threads who share their address space with the other threads within the process. This makes programming with threads more complex. The result of a thread crashing may have a more severe impact on the other threads within the same process since they all shared the same data. The new process is used by the server to handle the newly created connection. This means that for every connected client, there is a process created. This of course means that this solution does not scale awfully well. This is however not a big problem for us since the time taken for a Sensor to connect to the server really does not matter. Once all Sensors in a setup have connected, they should not disconnect unless taken down for maintenance or replacement. 
 
-Using processes presented us with a new challenge, interprocess communication. A process is not aware of it's neighbor. For all it knows, it is the only process running. Every time a client connects, a new process is born to take care of the communication with the new client. Since every process has got its own virtual address space, the processes are isolated from each other. This posed a challenge because we wanted the atomic clock controller to collect data from Sensors for processing. IPC (inter process communication) is nothing new, and one way to accomplish it, is to use shared memory segments that are accessible for all the processes. The processes store the data they have received from their respective clients in the shared memory segment. That way, it is easy for one process handling a Sensor to check up on data received from another Sensor. This kind of functionality was seen as valuable, but is not utilized to the extent it was envisioned. If more filters are added, the architecture would probably make more sense as the current ones do not really use the shared memory to cross check data. 
+Using processes presented us with a new challenge, interprocess communication. A process is not aware of its neighbor. For all it knows, it is the only process running. Every time a client connects, a new process is born to take care of the communication with the new client. Since every process has its own virtual address space, the processes are isolated from each other. This posed a challenge because we wanted the atomic clock controller to collect data from sensors for processing. Inter process communication (IPC) is nothing new, and one way to accomplish it, is to use shared memory segments that are accessible for all the processes. The processes store the data they have received from their respective clients in the shared memory segment. That way it is easy for one process handling a Sensor to check up on data received from another Sensor. This kind of functionality was seen as valuable, but is not utilized to the extent it was envisioned. If more filters are added, the architecture would probably make more sense as the current ones do not really use the shared memory to cross check data. 
 
-Using shared memory is by no means the only way to implement interprocess communication. Another approach to inter process communication that was considered, was using a \texttt{pipe}. The pipe can be seen as a unidirectional channel where data written to end of the pipe is buffered by the operating system until the data is read from the other end of the pipe. This would however mean that each process would not only have to listen to the client connected, but also to the pipes connecting them to the other processes. This would be the case with message passing and sockets as well. In contrast, the shared memory approach allowed for the server to act as single unit even though many processes are at work. Allowing multiple processes to share the same memory segment is like asking for trouble. At some point the program will suffer from race conditions and unexpected behavior. The shared memory segments are therefor protected with semaphores.
+Using shared memory is by no means the only way to implement interprocess communication. Another approach to inter process communication that was considered, was using a \texttt{pipe}. The pipe can be seen as a unidirectional channel where data written to end of the pipe is buffered by the operating system until the data is read from the other end of the pipe. This would however mean that each process would not only have to listen to the client connected, but also to the pipes connecting them to the other processes. This would be the case with message passing and sockets as well. In contrast, the shared memory approach allowed for the server to act as a single unit even though many processes are at work. Allowing multiple processes to share the same memory segment is like asking for trouble. At some point the program will suffer from race conditions and unexpected behavior. The shared memory segments are therefor protected with semaphores.
 
-The atomic clock controller does not have graphical user interface. Seeing how it was going to operate much like a service, the need for a graphical user interface was not prioritized. A user can interface with the system by logging on using telnet, and issue commands. In order to separate the intention of a connected client, be it to deliver GPS data or to send commands to system, roles where made. A client connected to the server can have two roles. It can either be a Sensor or a Monitor. The Sensor role is already explained. The Monitor role was added in order for a user of the system to connect to the server and check status or issue commands. For a client to assume the role of a Monitor, the client has to pick a negative integer as ID number. This way, the Server does not expect you as a client to report any NMEA data the way it would with a Sensor. The Monitor role can also be used to interface with the Server. See (\ref{interface}) for more.
+The atomic clock controller does not have graphical user interface. Seeing how it was going to operate much like a service, the need for a graphical user interface was not prioritized. A user can interface with the system by logging on using telnet, and issue commands. In order to separate the intention of a connected client, be it to deliver GPS data or to send commands to system, roles were made. A client connected to the server may have two roles. It can choose to  either be a sensor or a monitor. The Sensor role is already explained. The Monitor role was added in order for a user of the system to connect to the server and check status or issue commands. For a client to assume the role of a Monitor, the client has to pick a negative integer as ID number. This way, the Server does not expect you as a client to report any NMEA data the way it would with a Sensor. The monitor role can also be used to interface with the Server. See (\ref{interface}) for more.
 
 \subsection{Security}
-Implementing good security is not an easy task and should not be taken lightly. The goal when developing the Sensor Server was to produce a rough prototype that could prove our concept. Time was therefor allocated towards producing features that would realize this goal, instead of attempting to implement security mechanisms that would have been flawed anyway because of time constraints.
+Implementing good security is not an easy task and should not be taken lightly. The goal when developing the Sensor Server was to produce a rough prototype that could prove our concept. Time was therefor allocated towards producing features that would realize this goal instead of attempting to implement security mechanisms that would have been flawed anyway because of time constraints.
 
 \chapter{Atomic clock controller implementation}
 
@@ -48,7 +48,7 @@ Implementing good security is not an easy task and should not be taken lightly. 
 Figure \ref{sketch} shows a simplified block diagram of the Sensor Server and its tasks. Server tasks include:
 \begin{itemize}
   \item Handle connections to clients.
-  \item Update structures as clients status changes (disconnects or gets kicked out).
+  \item Update structures as the clients' status' changes (disconnects or gets kicked out).
   \item Communication with the atomic clock and updating the atomic clock model.
   \item Sensor data analysis and filter updates.
   \item Raising alarms based on filter status.
@@ -62,7 +62,7 @@ Figure \ref{sketch} shows a simplified block diagram of the Sensor Server and it
 \end{figure}
 
 \section{Implementation description}
-In the following section, the architecture and inner workings, data structures and key components of the Sensor Server will be explained. The Server core (\ref{server_core}) consists of the source code in \texttt{sensor\_server.c}. The Parser and Handler spans over texttt{session.c} and texttt{actions.c}. The atomic clock model and the associated filters source code is in \texttt{csac\_filter.c}. The filter using GPS data is in \texttt{filters.c}. Figure \ref{server_call_graph} shows a simplified call graph for the Sensor Server.
+In the following section, the architecture and inner workings, data structures and key components of the Sensor Server will be explained. The Server core (\ref{server_core}) consists of the source code in \texttt{sensor\_server.c}. The Parser and Handler spans over texttt{session.c} and texttt{actions.c}. The atomic clock model and the associated filters' source code can be found in \texttt{csac\_filter.c}. The filter using GPS data is in \texttt{filters.c}. Figure \ref{server_call_graph} shows a simplified call graph for the Sensor Server.
 
 \subsection{Server core}\label{server_core}
 \begin{figure}
@@ -82,21 +82,21 @@ In the following section, the architecture and inner workings, data structures a
 The "Server core" is the main process and the parent of every process created during the life of the Sensor Server. It spawns the process maintaining the atomic clock model as well as new processes for every client that connects. Figure \ref{figure_server_core} is a block diagram of the Server core. 
 
 \begin{itemize} % Sources needed here?
-  \item The Server software takes one parameter to start, the port. If the parameter are missing or the parameter is illegal, a string containing usage information is printed and the program exits. Because the Server also is responsible for communication with the atomic clock, it needs the rights to access the serial port connected to the atomic clock \footnote{The easiest way to achieve this is to run the program as \texttt{sudo} or login as root. The best solution would probably be to add the user to a group with the right permissions. This is often the \texttt{dialout} group.}.
-  \item The configuration is initialized and loaded. If the configuration fails to load, the Server prints and error message and exits.
+  \item The Server software takes one parameter to start, the port. If the parameters are missing or the parameters are illegal, a string containing usage information is printed and the program exits. Because the Server also is responsible for communication with the atomic clock, it needs the rights to access the serial port connected to the atomic clock \footnote{The easiest way to achieve this is to run the program as \texttt{sudo} or login as root. The best solution would probably be to add the user to a group with the right permissions. This is often the \texttt{dialout} group.}.
+  \item The configuration is initialized and loaded. If the configuration fails to load the Server prints and error message and exits.
   \item The \texttt{client\_list}, a shared memory segment containing a linked list containing all the clients, is initialized. See section \ref{clms} and \ref{linked_list} for more about the client list shared memory segment and linked list implementation.  
   \item Shared memory segments and semaphores are initialized and allocated.  If the allocation fails, the Server prints an error message and exits. See section \ref{shared_mem_sem} for more about semaphores and shared memory.
-  \item The process responsible for maintaining the atomic clock model and filter s forked out. If the fork fails, the server prints an error message and exits. See section \ref{csac_model} for more about the atomic clock model.
-  \item Handler for SIGINT (interrupt) SIGTERM (terminate) and SIGCHLD (child process is interrupted or terminated) is registered.
+  \item The process responsible for maintaining the atomic clock model and filters is forked out. If the fork fails the server prints an error message and exits. See section \ref{csac_model} for more about the atomic clock model.
+  \item Handler for SIGINT (interrupt) SIGTERM (terminate) and SIGCHLD (child process is interrupted or terminated) are registered.
   \begin{itemize}
-      \item When a process exits, a SIGCHLD signal is sent to the parent. When a client disconnects from the server, the process that handled the client exits. Ideally, the client disconnects from the server by sending a protocol compliant "disconnect request". This way, the server can handle the disconnect in a controlled manner and update its client list when the client disconnects. However, this is not always the case and if the client disconnects abruptly and without a warning, the server still needs to handle it. Therefore, when a SIGCHLD signal is received, the server iterates through its client list and finds the client who's PID matches the sender of the signal and removes it from the list. In figure \ref{server_core} this routine is the part in the red dotted box. 
+      \item When a process exits, a SIGCHLD signal is sent to the parent. When a client disconnects from the server the process that handled the client exits. Ideally, the client disconnects from the server by sending a protocol compliant "disconnect request". This way the server can handle the disconnect in a controlled manner and update its client list when the client disconnects. However, this is not always the case and if the client disconnects abruptly and without a warning, the server still needs to handle it. Therefore, when a SIGCHLD signal is received, the server iterates through its client list and finds the client whose PID matches the sender of the signal and removes it from the list. In figure \ref{server_core} this routine is the part in the dotted box. 
   \end{itemize}
   \item The socket is initialized and marked for listening. See section \ref{sockets} for more about sockets. 
   \item A loop is entered. The loop breaks when \texttt{volatile sig\_atomic\_t done} equals 0. If the loop is broken, the semaphores are destroyed and all allocated memory is freed, the servers socket file descriptor is closed and the Server exits. See section \ref{server_synchro} for more about variables used in synchronization mechanisms.
-  \item When a client connects, the server checks if the maximum number of clients has been reached. If this number has been reached, an error message is written back to the client and the clients socket file descriptor is closed. If the maximum number of clients has not yet been reached, the client list gets updated and a fork is performed.
+  \item When a client connects the server checks if the maximum number of clients has been reached. If this number has been reached an error message is written back to the client and the client's socket file descriptor is closed. If the maximum number of clients has not yet been reached, the client list is updated and a fork is performed.
   The parent process then resumes the loop. 
-  \item The process that just forked out for the new connection, closes the server socket file descriptor it inherited from its parent.
-  \item The new process then updates its client table entry and proceeds to the listening loop. This is covered in section \ref{parser_and_handler}. See section \ref{client_table_entry} for more about the client table entry struct.
+  \item The process that just forked out for the new connection closes the server socket file descriptor it inherited from its parent.
+  \item The new process then updates its client table entry and proceeds to the listening loop. This is covered in section \ref{parser_and_handler}. See section \ref{client_table_entry} for more about the client table entry data structure.
 \end{itemize}
 
 \subsection{Clock model implementation}\label{csac_model}
@@ -106,7 +106,7 @@ The "Server core" is the main process and the parent of every process created du
    \caption[Execution flow the clock model]{Block diagram showing the flow of execution in the atomic clock model}
    \label{figure_csac_model}
 \end{figure}
-Conceptually, the atomic clock model and the filter that uses the model is two separate tasks. In practice however, they are intertwined as figure \ref{figure_csac_model} suggests. See section \ref{hw_csac} for more about the atomic clock and section \ref{clock_model_harald} for the model itself.
+Conceptually, the atomic clock model and the filter that uses the model are two separate tasks. In practice however, they are intertwined as figure \ref{figure_csac_model} suggests. See section \ref{hw_csac} for more about the atomic clock and appendix \ref{clock_model_harald} for the model itself.
 
 \begin{itemize}
   \item The configuration for the model is loaded. The configuration includes values defining the accepted limits for steering and phase difference. Optionally, it can also include state values from an "earlier" model \footnote{The functionality to restore an earlier model is not without restrictions. It is typically meant for a situation where the Server needs to be taken down for a couple hours and a new warm-up period is considered undesirable. This is better explained in section \ref{clock_model_harald}} that can be used to initialize the model further, thus reducing the warm-up time. If the loading of the configuration fails, an error message is printed, the \texttt{volatile sig\_atomic\_t done} is set to 1 and the process exits. This also breaks the server core (\ref{server_core}) loop. After all, the system needs the atomic clock to do the job it is intended for.
