--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -159,7 +159,10 @@ long]
 \begin{abstract}
 We present in this report, our work with developing a system that we believe should be able to detect GPS spoofing attacks done with an advanced, state of the art GPS spoofer.
 
-We describe a smart clock controller (SMACC) intended to complement a commercial disciplined clock so that it becomes ‘spoof proof’, i.e. hardened against several classes of GPS jamming and spoofing attacks. The controller uses a multifactorial approach to evaluate the validity/integrity of received GPS signals based on a number of observables as well as clock correction modelling. In particular, multiple GNSS receivers in combination with the stability of a chip scale atomic clock (CSAC) is used to build a multi-layered situational awareness aimed to provide resilience against seamless GPS time hacking attacks[1]. Moreover, the stability of the CSAC will provide enhanced holdover operation in the case of spoofing or jamming attacks. The ‘spoof proof CSAC SMACC’ is built using inexpensive off-the-shelf commercial components
+We describe a smart clock controller (SMACC) intended to complement a commercial disciplined clock so that it becomes "spoof proof", i.e. hardened against several classes of GPS jamming and spoofing attacks. The controller uses a multifactorial approach to evaluate the validity/integrity of received GPS signals based on a number of observables as well as clock correction modeling. In particular, multiple GNSS receivers in combination with the stability of a chip scale atomic clock (CSAC) is used to build a multi-layered situational awareness aimed to provide resilience against seamless GPS time hacking attacks. Moreover, the stability of the CSAC will provide enhanced holdover operation in the case of spoofing or jamming attacks. The "spoof proof CSAC SMACC" is built using inexpensive off-the-shelf commercial components.
+- ...accomodate multiple networked GPS sensors through a flexible client/server architechture
+- logging of GPS sensor data
+- logging of clock disciplining data
 \end{abstract}
 
 % Where = hvor
